# choose-a-rag

./: .gitignore  Makefile  README.md  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
api/: base_rag.py  debugging.py  google_rag.py  llama_rag.py  openai_rag.py  server.py
api/chunkers/: __init__.py  base.py  markdown_chunker.py  unstructured_chunker.py
api/everything/: __init__.py  base.py  everything_gemini_pro_rag.py  everything_gemini_ultra_rag.py  everything_gpt4_rag.py  everything_palm_rag.py
api/hyde/: __init__.py  base.py  hyde_gemini_pro_rag.py  hyde_gemini_ultra_rag.py  hyde_gpt4_rag.py  hyde_palm_rag.py
api/llms/: __init__.py  gemini.py  genaix.py  palm.py
api/multi_query/: __init__.py  base.py  multi_query_gemini_pro_rag.py  multi_query_gemini_ultra_rag.py  multi_query_google_rag.py  multi_query_gpt4_rag.py  multi_query_palm_rag.py
api/naive/: __init__.py  google_rag.py  openai_rag.py  palm_rag.py
api/reranker/: __init__.py  base.py  reranker_gemini_pro_rag.py  reranker_gemini_ultra_rag.py  reranker_gpt4_rag.py  reranker_palm_rag.py
api/tree_summarizer/: base.py  markdown_chunker.py
api/window/: __init__.py  markdown_chunker.py  window_google_rag.py
scripts/: show_corpus.py
src/: api.ts  app.ts  chat_box.ts  file_upload.ts  flashing_dots.ts  rating_thumbs.ts  secret.ts  vector_db.ts
src/common/: view_model.ts
style/: app.css  chat_box.css  flashing_dots.css  rating_thumbs.css
