[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
files = [
    "api/**/*.py",
]

[tool.poetry]
name = "choose-a-rag"
version = "0.1.0"
description = ""
authors = ["Lawrence Tsang <pikalaw@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
httpx = "^0.25.1"
fastapi = {extras = ["all"], version = "^0.104.1"}
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
pydantic = "^2.4.2"
openai = "^1.2.0"
llama-hub = "^0.0.43"
unstructured = {extras = ["all-docs"], version = "^0.10.29"}
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
pytesseract = "^0.3.10"
llama-index = {git = "https://github.com/pikalaw/llama_index.git", rev = "generative_service"}
google-ai-generativelanguage = "^0.4.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
